# rocket-tut

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/data/: db.rs  mod.rs  mongo_connection.rs  redis_connection.rs  security.rs
src/routes/: auth.rs  mod.rs  ping.rs  responses.rs  user.rs
tests/: auth_fail.rs  auth_test.rs  basic_test.rs  failures_test.rs  persistency_test.rs
tests/common/: mod.rs
